--- a/blogspot.html
+++ b/blogspot.html
@@ -12,7 +12,7 @@
         <div id="cabecera">
             HyperBlog
             <span id="tagline">
-                Tu blog de confianza
+                Tu blog maestro
             </span>
         </div>
         <div id="post">
@@ -20,6 +20,8 @@
             <p> Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
 
             <p> Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un Rockstar, pero estadisticamente no lo eres, por ahora...</p>
+
+            <p> Suscribete y dale like</p>
         </div>
 
 
